# dfhack

./: .gitmodules
plugins/: CMakeLists.txt
plugins/dgc/: CMakeLists.txt  dgc.cpp  dgc.h
